Adding DB connection.

--- a/BookStoreApp.Api/appsettings.json
+++ b/BookStoreApp.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BookStoreAppDbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Trusted_Connection=true;Initial Catalog=BookStoreDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
